fix(tabs-extended): vertical tab text alignment off in selected

--- a/packages/styles/scss/components/tabs-extended/_tabs-extended.scss
+++ b/packages/styles/scss/components/tabs-extended/_tabs-extended.scss
@@ -52,6 +52,7 @@
             @include type-style('productive-heading-01');
 
             color: $text-primary;
+            line-height: 1.375rem;
           }
         }
       }
